{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 8,
  "lineage": "0469e23c-02b3-023a-de11-81963879007e",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "iac_vnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "enable_ula_internal_ipv6": false,
            "id": "projects/iac-selfhealing/global/networks/iac-vnetwork",
            "mtu": 0,
            "name": "iac-vnetwork",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3458885171064070978",
            "numeric_id": "3458885171064070978",
            "project": "iac-selfhealing",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/networks/iac-vnetwork"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "iac-vnetwork",
            "project": "iac-selfhealing"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "iac_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-08-25T20:30:18.761-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.10.0.1",
            "id": "projects/iac-selfhealing/regions/australia-southeast1/subnetworks/iac-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "iac-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/networks/iac-vnetwork",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iac-selfhealing",
            "purpose": "PRIVATE",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/regions/australia-southeast1/subnetworks/iac-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7837992830602830629
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "iac-subnet",
            "project": "iac-selfhealing",
            "region": "australia-southeast1"
          },
          "dependencies": [
            "module.networking.google_compute_network.iac_vnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iac_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-25T20:30:12.094-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iac-selfhealing/global/firewalls/iac-firewall",
            "log_config": [],
            "name": "iac-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/networks/iac-vnetwork",
            "params": [],
            "priority": 1000,
            "project": "iac-selfhealing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/firewalls/iac-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "iac-firewall",
            "project": "iac-selfhealing"
          },
          "dependencies": [
            "module.networking.google_compute_network.iac_vnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iac_health_check_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-25T20:30:12.110-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iac-selfhealing/global/firewalls/iac-firewall-health-check",
            "log_config": [],
            "name": "iac-firewall-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/networks/iac-vnetwork",
            "params": [],
            "priority": 1000,
            "project": "iac-selfhealing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-selfhealing/global/firewalls/iac-firewall-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "iac-firewall-health-check",
            "project": "iac-selfhealing"
          },
          "dependencies": [
            "module.networking.google_compute_network.iac_vnetwork"
          ]
        }
      ]
    }
  ]
}